--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
     "pg": "^8.0.2",
