--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "TCSS 450",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
@@ -26,6 +26,9 @@
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
     "pg": "^8.0.2",
-    "pushy": "^2.0.8"
+    "pushy": "^2.0.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "gh-pages": "^4.0.0"
   }
 }
